--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #0073e6;
+    background: hsl(270, 6%, 93%);
+    background-color: (214 91% 6%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,7 +10,7 @@ body {
 }
 
 .container {
-    background: white;
+    background: #3e0fe7;
     padding: 20px;
     border-radius: 8px;
     text-align: center;
@@ -40,7 +41,7 @@ input {
 }
 
 button {
-    background-color: #0073e6;
+    background-color: hsl(0, 100%, 45%);
     color: white;
     border: none;
     padding: 10px 15px;
